# vlsvrs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  install.sh  main.c  pyproject.toml
.github/workflows/: rust.yml
fortran_bindings/: vlsvrs.f90
include/: vlsvrs.h
src/: constants.rs  lib.rs  main.rs  restart_particle_sampler.rs  tracer_fields.rs  tracer_particles.rs  vdf_reader.rs  vlsv_back_ptr.rs  vlsv_dump.rs  vlsv_field_line_tracer.rs  vlsv_ptr.rs  vlsv_ptr_gc2d.rs  vlsv_reader.rs  vlsv_tracer.rs  vlsv_view.rs  vlsv_viewer.rs  vlsvdump.rs  vlsvptr.rs
test/: fullf.0000001.vlsv
vis/: hist.py  particle_tracing_plots.py  ptrReader.py  quickvideo.py  quickvideo_2planes.py  quickview.py
