[package]
name = "vlsvrs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.22.0"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2.172"
memmap2 = "0.9.7"
ndarray = "0.16.1"
num-traits = "0.2.19"
rand = "0.9.0"
rand_distr = "0.5.1"
raylib = "5.5.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"

[[bin]]
name="test"
path="src/main.rs"

[[bin]]
name="vlsvdump"
path="src/vlsvdump.rs"

[[bin]]
name="vlsvptr"
path="src/vlsvptr.rs"

[[bin]]
name="vdfreader"
path="src/vdf_reader.rs"

[lib]
name = "vlsvrs"
crate-type = ["staticlib"]
