[package]
name = "vlsvrs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.22.0"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2.174"
memmap2 = "0.9.7"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
num-traits = "0.2.19"
numpy = "0.25.0"
pyo3 = "0.25.1"
rand = "0.9.0"
rand_distr = "0.5.1"
raylib = "5.5.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"

[[bin]]
name="vlsv_dump"
path="src/vlsv_dump.rs"

[[bin]]
name="vlsv_ptr"
path="src/vlsv_ptr.rs"

[[bin]]
name="vlsv_view"
path="src/vlsv_view.rs"

[lib]
name = "vlsvrs"
path = "src/vlsv_reader.rs"
crate-type = ["staticlib", "cdylib"]

[features]
default = []
with_bindings = []
